--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@babel/core": "^7.17.10",
     "@types/styled-components": "^5.1.25",
     "next": "12.1.5",
-    "react": "18.1.0",
+    "react": "^18.2.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.30.0",
     "react-input-mask": "^2.0.4",
