--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@babel/core": "^7.17.10",
+    "@next/eslint-plugin-next": "^13.0.6",
     "@types/styled-components": "^5.1.25",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "next": "12.1.5",
     "react": "^18.2.0",
     "react-dom": "18.1.0",
@@ -23,7 +25,7 @@
     "@types/node": "17.0.30",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
-    "@types/react-input-mask": "^3.0.1",
+    "@types/react-input-mask": "^3.0.2",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
     "typescript": "4.6.4"
