--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@babel/core": "^7.17.10",
     "@next/eslint-plugin-next": "^13.0.6",
-    "@types/styled-components": "^5.1.25",
     "eslint-plugin-react-hooks": "^4.6.0",
     "next": "12.1.5",
     "react": "^18.2.0",
@@ -27,7 +26,7 @@
     "@types/react-dom": "18.0.3",
     "@types/react-input-mask": "^3.0.2",
     "eslint": "8.14.0",
-    "eslint-config-next": "12.1.5",
+    "eslint-config-next": "^13.0.6",
     "typescript": "4.6.4"
   }
 }
